--- a/src/resume-html/main.css
+++ b/src/resume-html/main.css
@@ -21,7 +21,7 @@ html {
   color-scheme: light dark;
 
   --color-background-light: #ffffff;
-  --color-dimmed-light: #f3f4f5;
+  --color-dimmed-light: #dde1e6;
   --color-primary-light: #191e23;
   --color-secondary-light: #6c7781;
   --color-accent-light: #0073aa;
